--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>be.g00glen00b</groupId>
-    <artifactId>spring-ng-chat</artifactId>
+    <groupId>com.danielstradowski</groupId>
+    <artifactId>chess</artifactId>
     <packaging>war</packaging>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Spring/AngularJS chat application</name>
-    <url>http://g00glen00b.be/spring-angular-chat</url>
-    <description>This is a demo application using the Spring framework, Spring messaging/WebSockets and AngularJS as the front-end language.</description>
+    <name>Spring/AngularJS chess application</name>
+    <url>http://danielstradowski.com/chess</url>
+    <description>This is a chess application using the Spring framework, Spring messaging/WebSockets and AngularJS as the front-end language.</description>
 
     <build>
-        <finalName>spring-ng-chat</finalName>
+        <finalName>chess</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
