--- a/.bowerrc
+++ b/.bowerrc
@@ -1,4 +1,6 @@
 {
   "directory": "src/main/webapp/libs",
-  "json": "bower.json"
+  "json": "bower.json",
+  "proxy":"http://genproxy.amdocs.com:8080/",
+  "https-proxy":"http://genproxy.amdocs.com:8080/"
 }
