--- a/pom.xml
+++ b/pom.xml
@@ -95,5 +95,10 @@
             <artifactId>jackson-jaxrs-json-provider</artifactId>
             <version>2.3.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20151123</version>
+        </dependency>
     </dependencies>
 </project>
